# RegexRustler

./: Cargo.toml  README.md  concat.py  file.txt  output_file.txt
src/: errors.rs  lib.rs  main.rs  mod.rs  parser.rs  processor.rs  real_time.rs
tests/: integration_test.rs  run_test.sh
