[package]
name = "regex_rustler"
version = "0.1.0"
edition = "2021"
author = "Eyal Lampel"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fancy-regex = "0.7.1"
colored = "2.0"
clap = { version = "4.4.11", features = ["cargo"] }

[dev-dependencies]
assert_cmd = "1.0"
tempfile = "3.0"
predicates = "1.0"
